
[package]
name = "awesome_sphinxdoc_builder"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
minijinja = "2.12.0"
toml = "0.8.12"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
notify = "6.1.1"
tiny_http = "0.12.0"
